--- a/packages/chrome/tsconfig.json
+++ b/packages/chrome/tsconfig.json
@@ -9,9 +9,25 @@
     "./**/*.tsx"
   ],
   "compilerOptions": {
+    "types": [
+      "node",
+      "chrome"
+    ],
     "paths": {
-      "~*": [
-        "./*"
+      "@/*": [
+        "./src/*"
+      ],
+      "@components/*": [
+        "./src/components/*"
+      ],
+      "@lib/*": [
+        "./src/lib/*"
+      ],
+      "@store/*": [
+        "./src/store/*"
+      ],
+      "@styles/*": [
+        "./src/styles/*"
       ]
     },
     "baseUrl": "."
