--- a/packages/chrome/.gitignore
+++ b/packages/chrome/.gitignore
@@ -9,6 +9,10 @@
 # testing
 /coverage
 
+#cache
+.turbo
+
+
 # misc
 .DS_Store
 *.pem
@@ -20,14 +24,19 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-.env*.local
+.env*
 
 out/
 build/
 dist/
 
-# plasmo
-.plasmo
+# plasmo - https://www.plasmo.com
+.plasmo/*
+
+# bpp - http://bpp.browser.market/
+keys.json
 
 # typescript
 .tsbuildinfo
+
+*storybook.log
