--- a/packages/chrome/components.json
+++ b/packages/chrome/components.json
@@ -7,8 +7,7 @@
         "config": "tailwind.config.js",
         "css": "src/style.css",
         "baseColor": "slate",
-        "cssVariables": true,
-        "prefix": "plasmo-"
+        "cssVariables": true
     },
     "aliases": {
         "components": "~/components",
