added the changes for the request meta routes

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "nodemon src/app.ts",
+    "generate": "prisma generate",
+    "migrate": "prisma migrate dev",
     "build": "tsc"
   },
   "dependencies": {
