--- a/packages/chrome/package.json
+++ b/packages/chrome/package.json
@@ -85,11 +85,16 @@
   "manifest": {
     "key": "$CRX_PUBLIC_KEY",
     "host_permissions": [
-      "https://*/*"
+      "https://*/*",
+      "http://localhost:3000/*"
     ],
     "permissions": [
       "storage",
-      "activeTab"
+      "activeTab",
+      "declarativeNetRequest",
+      "declarativeNetRequestWithHostAccess",
+      "webRequest",
+      "webRequestBlocking"
     ]
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
