Squashed commit of the following:
commit 00c12211a4d640afe44b6be94a6862af34ba9c21
Author: Shivaraj Bakale <shivaraj.bakale@apollo.io>
Date:   Sat Jun 7 19:42:50 2025 +0530

    Added the changes for the release 1

commit d9c02d882bfd23faef11fe8bf45fdb523296badb
Author: Shivaraj Bakale <shivaraj.bakale@apollo.io>
Date:   Thu Jun 5 14:12:40 2025 +0530

    Added the changes for the redirector

commit 75f792bc850670c3e64b240daba7da9d61461c90
Author: Shivaraj Bakale <shivaraj.bakale@apollo.io>
Date:   Wed Jun 4 15:25:15 2025 +0530

    Added the chages for fixing the issues

commit 244f093f3f885d3616376f23946c4ace378e4742
Author: Shivaraj Bakale <shivaraj.bakale@apollo.io>
Date:   Wed Jun 4 15:03:50 2025 +0530

    Added the changes for the seed and the docker compsoe file

commit 37851c1ef7838c2a1d0b7e33ea02c48189ef40d7
Author: Shivaraj Bakale <shivaraj.bakale@apollo.io>
Date:   Wed Jun 4 13:17:16 2025 +0530

    Added the changes for the request metadata

commit 0d4bee364da5c402da98a2ff59522d91e6933d69
Author: Shivaraj Bakale <shivaraj.bakale@apollo.io>
Date:   Wed Jun 4 13:12:24 2025 +0530

    added the changs for the schema changes

commit 7e4f0467788132f410090e0067016e5ca0eb86fd
Author: Shivaraj Bakale <shivaraj.bakale@apollo.io>
Date:   Wed Jun 4 12:37:32 2025 +0530

    added the changes for the request meta routes

commit d4aff3bdae396865c1d3c5965cded4c39332f0d9
Author: Shivaraj Bakale <shivaraj.bakale@apollo.io>
Date:   Wed Jun 4 02:15:10 2025 +0530

    added the changes for mocking the requests

commit acea2b5104473efa4d68eab13e552a27b867a390
Author: Shivaraj Bakale <shivaraj.bakale@apollo.io>
Date:   Wed Jun 4 02:00:13 2025 +0530

    Added the changes for the datatable

commit 2417956188cb702ae3946392104ce92376dcdda0
Author: Shivaraj Bakale <shivaraj.bakale@apollo.io>
Date:   Wed Jun 4 01:35:15 2025 +0530

    intergated zustand state management

commit 3d80b2167a66c69a166f29c0bf881b5d03ad573c
Merge: bc77b9c d9a30c3
Author: Shivaraj Bakale <shivaraj.bakale

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -5,7 +5,15 @@
   "private": true,
   "scripts": {
     "dev": "nodemon src/app.ts",
-    "build": "tsc"
+    "generate": "prisma generate",
+    "migrate": "prisma migrate dev",
+    "build": "tsc",
+    "db:up": "docker compose up -d",
+    "db:down": "docker compose down",
+    "db:reset": "docker compose down -v",
+    "db:migrate": "prisma migrate dev",
+    "db:generate": "prisma generate",
+    "setup": "npm run db:up && npm run db:migrate && npm run db:generate"
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
