--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "dev": "concurrently \"yarn backend:dev\" \"yarn chrome:dev\"",
     "build": "concurrently \"yarn backend:build\" \"yarn chrome:build\"",
     "start": "node scripts/start.js",
+    "start:docker": "node scripts/start-docker.js",
+    "logs": "yarn workspace backend docker:logs",
+    "down": "yarn workspace backend docker:down",
     "prestart": "node scripts/prestart.js",
     "submodule:init": "git submodule update --init --recursive",
     "submodule:update": "git submodule update --recursive --remote",
     "submodule:pull": "git pull --recurse-submodules",
-    "setup": "yarn submodule:init && yarn install && yarn build"
+    "setup": "yarn submodule:init && yarn install && yarn start:docker"
   },
   "devDependencies": {
     "concurrently": "^9.1.2"
