--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "logs": "yarn workspace backend docker:logs",
     "down": "yarn workspace backend docker:down",
     "prestart": "node scripts/prestart.js",
-    "setup": "yarn install && yarn start:docker"
+    "setup": "yarn install && yarn start:docker",
+    "update-submodules": "bash scripts/update-submodules.sh"
   },
   "devDependencies": {
     "concurrently": "^9.1.2"
